--- a/index.html
+++ b/index.html
@@ -6,28 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Object</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
 </head>
 <body class="center">
     <section>
         <h1>My Library</h1>
         <div>
             <h2>Add a New Book</h2>
-            <form autocomplete="off">
+            <form action='' autocomplete="off">
                 <ul>
                     <li class="form-group">
                         <label for="book-title">Title</label>
-                        <input type="text" maxlength="85" id="book-title">
+                        <input type="text" maxlength="85" id="book-title" required />
                     </li>
                     <li class="form-group">
                         <label for="book-author">Author</label>
-                        <input type="text" maxlength="40" id="book-author">
+                        <input required type="text" maxlength="40" id="book-author"/>
                     </li>
                     <li class="form-group">
                         <label for="book-pages">Pages</label>
-                        <input type="text" maxlength="15" id="book-pages">
+                        <input required type="number" maxlength="15" id="book-pages"/>
                     </li>
                     <li class="form-group">
                         <label for="book-stat">Status</label>
@@ -37,15 +34,16 @@
                         </select>
                     </li>
                 </ul>
+                <div class="center">
+                    <button type="submit" id="book-add">Add Book</button>
+                    <button type="button" id="book-clear">Clear</button>
+                </div>
             </form>
-            <div class="center">
-                <button type="button" id="book-add">Add Book</button>
-                <button type="button" id="book-clear">Clear</button>
-            </div>
+            
         </div>
         <div>
             <h2>Book List</h2>
-            <ul id="book-dump"></ul>         
+            <ul id="book-dump"><li id="default-msg" class="hide-me white-text">There are no books to display</li></ul>         
         </div>
     </section>
     <script src="scripts.js"></script>
